crates/tests/rust_snapshots/tests/snapshots/xlsx__showcase_xlsx_ir.snap
---
source: crates/tests/rust_snapshots/tests/xlsx.rs
expression: canonical_json(&json)
---
{
  "kind": "Xlsx",
  "properties": null,
  "sections": [],
  "sheets": [
    {
      "formulas": [],
      "hyperlinks": [],
      "name": "Sales",
      "tables": []
    },
    {
      "formulas": [],
      "hyperlinks": [],
      "name": "Summary",
      "tables": []
    }
  ],
  "slides": []
}
