crates/tests/rust_snapshots/tests/snapshots/xlsx__trim_all_empty_xlsx_ir.snap
---
source: crates/tests/rust_snapshots/tests/xlsx.rs
expression: canonical_json(&json)
---
{
  "kind": "Xlsx",
  "properties": null,
  "sections": [],
  "sheets": [
    {
      "formulas": [],
      "hyperlinks": [],
      "name": "Blank",
      "tables": []
    }
  ],
  "slides": []
}
