crates/tests/rust_snapshots/tests/snapshots/xlsx__trim_all_empty_xlsx_markdown.snap
---
source: crates/tests/rust_snapshots/tests/xlsx.rs
expression: normalize_markdown(&md)
---
## Sheet: Blank

|  |
| --- |
