crates/tests/rust_snapshots/tests/snapshots/xlsx__trim_sparse_trailing_xlsx_markdown.snap
---
source: crates/tests/rust_snapshots/tests/xlsx.rs
expression: normalize_markdown(&md)
---
<!-- officemd: kind=xlsx profile=compact first_row_as_header=true formulas=true headers_footers=true properties=false -->

## Sheet: Sparse

### Table 1 (rows 1–5, cols A–C)
| H1 | H2 | H3 |
| --- | --- | --- |
| 10 | 20 | 30 |
| 40 | 50 | 60 |
|  |  |  |
| Footer |  |  |
