crates/tests/rust_snapshots/tests/snapshots/xlsx__trim_wide_sparse_xlsx_markdown.snap
---
source: crates/tests/rust_snapshots/tests/xlsx.rs
expression: normalize_markdown(&md)
---
## Sheet: Wide

| Name | Value |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  | Note |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| Item | 100 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
